"head, nav and header update"

--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
+    <nav>
+       <ul>
+        <li>Xander Botha</li>
+        <li>Home</li>
+        <li>About Me</li>
+        <li>Projects</li>
+        <li>Contact Me</li>
+       </ul> 
+    </nav>
+
+    <header>
+        <h1>I'm Xander Botha. <br>
+        A student to be a Full-stack devloper <br>
+        based in London. </h1>
+    </header>
+
+    <div class="intro">
+        <p>I am currently studying to become a Full-stack developer with "IT Career Switch".</p>
+        <p></p>
+    </div>
     
 </body>
 </html>
