--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
 
     <div class="intro">
         <p>I am currently studying to become a Full-stack developer with "IT Career Switch".</p>
-        <p></p>
     </div>
+
+    <footer>
+        <ul>
+            <li><img src="" alt="Instagram"></li>
+            <li><img src="" alt="X"></li>
+            <li><img src="" alt="LinkedIn"></li>
+        </ul>
+    </footer>
     
 </body>
 </html>
