--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <h1>I'm Xander Botha. <br>
         A student to be a Full-stack devloper <br>
         based in London. </h1>
+        <img src="resources/Xan_Turkey_Boat.jpg" alt="Picture of Xander Botha">
     </header>
 
     <div class="intro">
