"basid style and basic html update"

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="/style.css">
+    <!-- <script src="script.js"></script> -->
 </head>
 
 <body>
@@ -20,12 +21,29 @@
 
     <header>
         <h1>I'm Xander Botha. <br>
-        A student to be a Full-stack devloper <br>
-        based in London. </h1>
+        A Full-stack developer in the making <br>
+        Based in London. </h1>
     </header>
 
-    <div class="intro">
-        <p>I am currently studying to become a Full-stack developer with "IT Career Switch".</p>
+    <div class="me">
+        <img src="/resources/xb.png" alt="">
+    </div>
+
+    <div class = "intro">
+        <h2>About me</h2>
+        <p>- I am currently studying with "IT Career Switch". <br>
+        My main profession before my IT journey was in sports, more spcifically Ice Hockey. <br>
+        I have always been a very positive and loving person by nature. I always strive to do my best <br>
+        and to help those around me to be their best selves.</p>
+        <p>My friends would probably describe me as someone that alwyas looks at the bright side of things. <br>
+            I have a very keen interrest to become great at front-and-back end development, that is why I am currebtly studying a <br>
+            Full-stack developer course. I am enjoying the new challenges and I have also gained a massive newfound respect for devs. <br><br>
+            This industry is not easy at all, but in my opinion one of the most fascinating indutries out there. <br> 
+            I absolutely love it so far.</p>
+    </div>
+
+    <div class="projects">
+
     </div>
 
     <footer>
@@ -33,7 +51,7 @@
             <li><img src="" alt="Instagram"></li>
             <li><img src="" alt="X"></li>
             <li><img src="" alt="LinkedIn"></li>
-        </ul>
+        </ul>    
     </footer>
     
 </body>
