--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
     </div>
 
     <div class="projects">
-
+        <h2>My Projects</h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </div>
 
     <footer>
