Add buttons with working JS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="/style.css">
-    <!-- <script src="script.js"></script> -->
+    
 </head>
 
 <body>
@@ -43,12 +43,20 @@
     </div>
 
     <div class="projects">
-        <h2>My Projects</h2>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+        <h2 id="xxx">My Projects</h2>
+        <div class="project1">
+            <h3>Project 1</h3> 
+            <button id="green" onclick="setColor('green')">Green</button>
+            <button id="red" onclick="setColor('red')">Red</button>
+            <button id="blue" onclick="setColor('blue')">Blue</button>
+            <button id="random" onclick="randomColor()">Random</button>
+        </div>
+        <div class="project1">
+            <h3>Project 2</h3>
+        </div>
+        <div class="project1">
+            <h3>Project 3</h3>
+        </div>
     </div>
 
     <footer>
@@ -56,8 +64,8 @@
             <li><img src="" alt="Instagram"></li>
             <li><img src="" alt="X"></li>
             <li><img src="" alt="LinkedIn"></li>
-        </ul>    
+        </ul>  
     </footer>
-    
+    <script src="script.js"></script> 
 </body>
 </html>
