add quote generator html and JS

--- a/index.html
+++ b/index.html
@@ -44,17 +44,22 @@
 
     <div class="projects">
         <h2 id="xxx">My Projects</h2>
+
         <div class="project1">
-            <h3>Project 1</h3> 
+            <h3>Color changer</h3> 
             <button id="green" onclick="setColor('green')">Green</button>
             <button id="red" onclick="setColor('red')">Red</button>
             <button id="blue" onclick="setColor('blue')">Blue</button>
             <button id="random" onclick="randomColor()">Random</button>
         </div>
-        <div class="project1">
-            <h3>Project 2</h3>
+
+        <div class="project2">
+            <h3>Random quote generator</h3>
+            <p id="quote"></p>
+            <button onclick="generateQuote()">Generate Quote</button>
         </div>
-        <div class="project1">
+
+        <div class="project3">
             <h3>Project 3</h3>
         </div>
     </div>
