add about me hide and show, add resource

--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
 
     <div class = "intro">
         <h2>About me</h2>
-        <p>- I am currently studying with "IT Career Switch". <br>
-        My main profession before my IT journey was in sports, more spcifically Ice Hockey. <br>
-        I have always been a very positive and loving person by nature. I always strive to do my best <br>
-        and to help those around me to be their best selves.</p>
-        <p>My friends would probably describe me as someone that alwyas looks at the bright side of things. <br>
-            I have a very keen interrest to become great at front-and-back end development, that is why I am currebtly studying a <br>
-            Full-stack developer course. I am enjoying the new challenges and I have also gained a massive newfound respect for devs. <br><br>
-            This industry is not easy at all, but in my opinion one of the most fascinating indutries out there. <br> 
-            I absolutely love it so far.</p>
+        <button onclick="hideShow()">About Me</button>
+            <div class="aboutP" id="aboutP">
+                <p>- I am currently studying with "IT Career Switch". <br>
+                My main profession before my IT journey was in sports, more spcifically Ice Hockey. <br>
+                I have always been a very positive and loving person by nature. I always strive to do my best <br>
+                and to help those around me to be their best selves.</p>
+                <p>My friends would probably describe me as someone that alwyas looks at the bright side of things. <br>
+                    I have a very keen interrest to become great at front-and-back end development, that is why I am currebtly studying a <br>
+                    Full-stack developer course. I am enjoying the new challenges and I have also gained a massive newfound respect for devs. <br><br>
+                    This industry is not easy at all, but in my opinion one of the most fascinating indutries out there. <br> 
+                    I absolutely love it so far.</p>
+            </div>
+            
     </div>
 
     <div class="projects">
@@ -55,8 +59,8 @@
 
         <div class="project2">
             <h3>Random quote generator</h3>
-            <p id="quote"></p>
             <button onclick="generateQuote()">Generate Quote</button>
+            <p id="quote"></p>
         </div>
 
         <div class="project3">
