"add logo Ul LI"

--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
         </div>
     </div>
 
+    <div class="programs">
+        <h3>Skills</h3>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+    </div>
+
     <footer>
         <ul>
             <li><img src="" alt="Instagram"></li>
