add and remove logos

--- a/index.html
+++ b/index.html
@@ -71,12 +71,15 @@
     <div class="programs">
         <h3>Skills</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><img src="resources/css3-fill.png" alt=""></li>
+            <li><img src="resources/github-fill.png" alt=""></li>
+            <li><img src="resources/html5-fill.png" alt=""></li>
+            <li><img src="resources/javascript-fill.png" alt=""></li>
+            <li><img src="resources/Visual-Studio--Streamline-Unicons (1).png" alt=""></li>
+            <li><img src="resources/Python-Logo--Streamline-Ultimate (1).png" alt=""></li>
+            <li><img src="resources/Code-Branch--Streamline-Unicons.png" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
         </ul>
 
     </div>
