--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <div class="me">
-        <img src="/resources/xb.png" alt="">
+        <img src="resources/xb.png" alt="Picture of Xander Botha">
     </div>
 
     <div class = "intro">
