Add media and Html

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     </nav>
 
     <header>
-        <h1>I'm Xander Botha. test <br>
+        <h1>I'm Xander Botha.<br>
         A Full-stack developer in the making <br>
         Based in London. </h1>
     </header>
 
-    <div class="me">
+    <!-- <div class="me">
         <img src="resources/xb.png" alt="Picture of Xander Botha">
-    </div>
+    </div> -->
 
     <div class = "intro">
         <h2>About me</h2>
@@ -86,9 +86,9 @@
 
     <footer>
         <ul>
-            <li><img src="" alt="Instagram"></li>
-            <li><img src="" alt="X"></li>
-            <li><img src="" alt="LinkedIn"></li>
+            <li><img src="/resources/instagram-line.png" alt="Instagram"></li>
+            <li><img src="/resources/twitter-x-line.png" alt="X"></li>
+            <li><img src="/resources/Linkedin--Streamline-Simple-Icons.png" alt="LinkedIn"></li>
         </ul>  
     </footer>
     <script src="script.js"></script> 
